@startuml decision-architecture
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam defaultFontName "PingFang SC"

package "Core" #FFF8DC {
  class RadarController
  class DecisionContext
}

package "Decision Pipeline" #E6F7FF {
  interface ITacticalProcessor
  class "TacticalProcessor<TView>" as TacticalProcessor
  class TargetClassifier
  class LpiController
  class EccmController

  ITacticalProcessor <|.. TacticalProcessor
  TacticalProcessor <|-- TargetClassifier
  TacticalProcessor <|-- LpiController
  TacticalProcessor <|-- EccmController

  TargetClassifier --> LpiController : next
  LpiController --> EccmController : next
}

package "Common Models" #F6FFED {
  class DecisionTrackSnapshotList
  class TargetCategoryList
  class LpiSourceInfo
  class EccmSourceInfo
  class RadarCommand
}

package "Environment" #FFF1F0 {
  interface IFeatureRepository
  class FeatureRepository
  IFeatureRepository <|.. FeatureRepository
}

RadarController --> DecisionContext : construct/update
RadarController --> ITacticalProcessor : ProcessTactics(context)
RadarController --> RadarCommand : submit commands

DecisionContext --> DecisionTrackSnapshotList : input
DecisionContext --> TargetCategoryList : classify result
DecisionContext --> LpiSourceInfo : source info
DecisionContext --> EccmSourceInfo : source info
DecisionContext --> RadarCommand : decision_commands

TargetClassifier --> IFeatureRepository : QueryBestMatch(optional)
TargetClassifier --> TargetCategoryList : write
TargetClassifier --> LpiSourceInfo : write

LpiController --> LpiSourceInfo : read-only
LpiController --> RadarCommand : append

EccmController --> EccmSourceInfo : read-only
EccmController --> RadarCommand : append

note right of TargetClassifier
- 依赖 TargetClassifierView
- 遍历全部目标
- 仓储匹配 + 规则回退
- 更新 LpiSourceInfo
end note

note right of LpiController
- 依赖 LpiControllerView
- 当前仅下发 SET_LPI_POWER
end note

note right of EccmController
- 依赖 EccmControllerView
- 干扰存在时下发 5 条 ECCM 指令
end note

@enduml
